--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3825,6 +3825,8 @@ Flan-T5和Flan-PaLM（[Scaling instruction-finetuned language models](https://ar
 
 ## 公开基准
 
+[LLM常用基准测试科普](https://zhuanlan.zhihu.com/p/694391642)
+
 + MMLU：
 + BIG-bench：
 + HELM：
