--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -5420,6 +5420,37 @@ SIGIR2023 \| ID vs 模态: 推荐系统ID范式有望被颠覆？
 
 [Diversifying by Intent in Recommender Systems](https://arxiv.org/pdf/2405.12327)，涨了dau等指标
 
+## ILM
+
+[Item-Language Model for Conversational Recommendation](https://arxiv.org/pdf/2406.02844)
+
+适用场景如下，{user}可以看成一种特殊的{item}，{history}是若干个item
+
+![ILM-tasks](../assets/ILM-tasks.png)
+
+参考BLIP-2（[Blip-2: bootstrapping language-image pre-training with frozen image encoders and large language models](https://arxiv.org/pdf/2301.12597)）提出的Q-former：
+
+![](../assets/2-stage-blip-2.png)
+
+引入了Q-former
+
+![ILM](../assets/ILM.png)
+
++ phase1：表示学习，交替训练如下两类表示学习
+    + item-text表示学习:
+        + query的tokens和item的cf emb过cross attn后，拿cls的输出得到v1
+        + text过attn得到v2
+        + v1和v2算item-text对比学习
+        + v2走一个自回归的任务(item grounded text generation)
+    + item-item表示学习
+        + query的tokens和item的cf emb过cross attn后，拿cls的输出得到v1
+        + query的tokens和item的cf emb过cross attn后，拿cls的输出得到v2
+        + v1和v2算item-item的对比学习
++ phase2：item-language model训练
+    + Q-former的item encoder经过一个linear输入到LLM中
+    + LLM参数freeze，只tune Q-former的参数和linear
+
+
 ## 其他
 
 [WWW 2024 | 工业界大模型在搜广推场景应用](https://zhuanlan.zhihu.com/p/686259205)
