--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2010,6 +2010,10 @@ $$
 
 [Attention as an RNN](https://arxiv.org/pdf/2405.13956)
 
+## Matmul-free
+
+[从LLM中完全消除矩阵乘法，效果出奇得好，10亿参数跑在FPGA上接近大脑功耗](https://mp.weixin.qq.com/s/HUvGGug48nGBx067nCbkag)
+
 
 # 训练与预测方法
 
@@ -3380,6 +3384,12 @@ Grok-1.5V: [https://x.ai/blog/grok-1.5v](https://x.ai/blog/grok-1.5v)
 ### MiniCPM
 
 [登顶Top2！MiniCPM-V 8B新版本：GPT-4V水准小钢炮，8G显存，4070轻松推理！](https://mp.weixin.qq.com/s/TQVHJlZDExD3nMPRsqa_5w)
+
+[可信度超越GPT-4V，清华&面壁揭秘「小钢炮」模型背后的高效对齐技术](https://mp.weixin.qq.com/s/7otafJLrrj4jlZIltQxcjQ)
+
+[RLAIF-V: Aligning MLLMs through Open-Source AI Feedback for Super GPT-4V Trustworthiness](https://arxiv.org/pdf/2405.17220)
+
+[https://github.com/RLHF-V/RLAIF-V](https://github.com/RLHF-V/RLAIF-V)
 
 ## 小结
 
