--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2010,6 +2010,8 @@ $$
 
 [Attention as an RNN](https://arxiv.org/pdf/2405.13956)
 
+### many-to-one RNN
+
 对query向量$$q$$的attention可以看成是一个函数，对输入的$$N$$个token $$x_{1: N}$$通过他们的key和value $$\left\{\left(k_i, v_i\right)\right\}_{i=1}^N$$ 变换成输出 $$\text { Attention }\left(q, k_{1: N}, v_{1: N}\right)$$，假设$$\bar{s}_i=\operatorname{dot}\left(q, k_i\right)$$，那么输出就是
 
 $$
@@ -2029,6 +2031,27 @@ $$
 其中第一行其实就是$$s_i-m_k=s_i-m_k+m_{k-1}-m_k$$，然后exp一下，$$exp(s_i-m_k)=exp(s_i-m_k)exp(m_{k-1}-m_k)$$，总结成如下图：
 
 ![attention-rnn-cell](../assets/attention-rnn-cell.png)
+
+所以Attention的RNN cell就是输入$$\left(a_{k-1}, c_{k-1}, m_{k-1}, q\right)$$，输出$$\left(a_k, c_k, m_k, q\right)$$，初始的状态是$$\left(a_0, c_0, m_0, q\right)=(0,0,0,q)$$
+
+然后就可以将之前的attention看成如下几类many-to-one的RNN了：
+
++ 传统attention只计算最后的一个输出
++ self-attention使用**输入token**作为初始状态
++ Perceiver的cross-attention使用**依赖input的隐变量**作为初始状态
+
+![many-to-one-rnn](../assets/many-to-one-rnn.png)
+
+对于新来的token而言：
+
++ 传统的RNN一般是流式地输入数据，因此只需要O(1)的内存和计算就行了
++ Transformer需要把这个新token当成一个初始状态加进来，所以需要把之前时间步的再重新算一次，需要O(N)的计算
++ Perceiver中的隐变量是依赖输入的，而且这个新token会改变value，因此初始状态也会变，所以需要从头算一遍，需要O(NL)的计算，L是隐变量个数（可以参考如下gpt4o的回答）
+
+![perceiver](../assets/perceiver.png)
+
+### many-to-many RNN
+
 
 
 ## Matmul-free
