--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2046,7 +2046,7 @@ $$
 
 + 传统的RNN一般是流式地输入数据，因此只需要O(1)的内存和计算就行了
 + Transformer需要把这个新token当成一个初始状态加进来，所以需要把之前时间步的再重新算一次，需要O(N)的计算
-+ Perceiver中的隐变量是依赖输入的，而且这个新token会改变value，因此初始状态也会变，所以需要从头算一遍，需要O(NL)的计算，L是隐变量个数（可以参考如下gpt4o的回答）
++ Perceiver中的隐变量是依赖输入的，而且这个新token会改变value，因此初始状态也会变，所以需要从头算一遍，需要O(NL)的计算，L是隐变量个数（可以参考代码[perceiver_torch](https://github.com/lucidrains/perceiver-pytorch/blob/main/perceiver_pytorch/perceiver_pytorch.py)和如下gpt4o的回答）
 
 ![perceiver](../assets/perceiver.png)
 
