--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3443,6 +3443,14 @@ Grok-1.5V: [https://x.ai/blog/grok-1.5v](https://x.ai/blog/grok-1.5v)
 
 [https://github.com/RLHF-V/RLAIF-V](https://github.com/RLHF-V/RLAIF-V)
 
+### DCFormer
+
+[彩云科技DCFormer大模型发布，效率是Transformer的两倍！](https://zhuanlan.zhihu.com/p/699582521)
+
+[Improving Transformers with Dynamically Composable Multi-Head Attention](https://arxiv.org/pdf/2405.08553)
+
+[https://github.com/Caiyun-AI/DCFormer](https://github.com/Caiyun-AI/DCFormer)
+
 ## 小结
 
 [开源模型进展盘点：最新Mixtral、Llama 3、Phi-3、OpenELM到底有多好？](https://mp.weixin.qq.com/s/bgdDYkGHbPZMMSJPIutFSQ)
