--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2194,6 +2194,10 @@ $$
 
 [从LLM中完全消除矩阵乘法，效果出奇得好，10亿参数跑在FPGA上接近大脑功耗](https://mp.weixin.qq.com/s/HUvGGug48nGBx067nCbkag)
 
+## H2O attention
+
+[H2O: Heavy-Hitter Oracle for Efficient Generative Inference of Large Language Models](https://arxiv.org/pdf/2306.14048)
+
 # 训练与预测方法
 
 ## 一些框架简介
@@ -4821,6 +4825,10 @@ DALL-E3：
 [Vision-LSTM: xLSTM as Generic Vision Backbone](https://arxiv.org/pdf/2406.04303)
 
 [https://nx-ai.github.io/vision-lstm/](https://nx-ai.github.io/vision-lstm/)
+
+## MAR
+
+[Autoregressive Image Generation without Vector Quantization](https://arxiv.org/pdf/2406.11838v1)
 
 # 多模态（视频）
 
