--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3345,8 +3345,8 @@ Med-PaLM2([Towards expert- level medical question answering with large language 
 
 基于152个多样的任务，对比了从44M到208B（Gopher）的不同transformer，发现Gopher在大多数任务上均达到sota：
 
-| Model         | Layers | Number Heads | Key/Value Size | d<sub>model</sub> | Max LR     | Batch Size |
-|---------------|--------|--------------|----------------|-------------------|------------|------------|
+| Model         | Layers | Number Heads | Key/Value Size | d_model | Max LR     | Batch Size |
+|---------------|--------|--------------|----------------|---------------|------------|------------|
 | 44M           | 8      | 16           | 32             | 512               | $$6 \times 10^{-4}$$  | 0.25M      |
 | 117M          | 12     | 12           | 64             | 768               | $$6 \times 10^{-4}$$  | 0.25M      |
 | 417M          | 12     | 12           | 128            | 1,536             | $$2 \times 10^{-4}$$  | 0.25M      |
