--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -5999,6 +5999,12 @@ $$
 
 [https://github.com/eloialonso/diamond](https://github.com/eloialonso/diamond)
 
+## LLM的不足
+
+[语言≠思维，大模型学不了推理：一篇Nature让AI社区炸锅了](https://mp.weixin.qq.com/s/BgMNITn5e1RGUOHQLKv7yg)
+
+[https://www.nature.com/articles/s41586-024-07522-w](https://www.nature.com/articles/s41586-024-07522-w)
+
 ## pandora
 
 [通用世界模型问世：不学习就能生成新领域视频，可实时控制](https://mp.weixin.qq.com/s/Vj2W3BtKITV4mxwVhDJHzg)
