--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -4715,6 +4715,15 @@ Old Logprobs是一次性一个batch的数据计算的，这是因为在一个bat
 
 [https://github.com/Vance0124/Token-level-Direct-Preference-Optimization](https://github.com/Vance0124/Token-level-Direct-Preference-Optimization)
 
+## CriticGPT
+
+[GPT-4批评GPT-4实现「自我提升」！OpenAI前超级对齐团队又一力作被公开](https://mp.weixin.qq.com/s/T0BHRROG5IKeLKrguESc7g)
+
+[LLM Critics Help Catch LLM Bugs](https://cdn.openai.com/llm-critics-help-catch-llm-bugs-paper.pdf)
+
+CriticGPT依旧是自回归模型。标注者先向ChatGPT的响应输出中人为注入一些微妙的错误，CriticGPT针对这些有错误的答案生成批评意见，之后再由人类训练师为批评意见进行打分排名。
+
+
 # 多模态（图像）
 
 [【IEEE Fellow何晓东&邓力】多模态智能论文综述：表示学习，信息融合与应用，259篇文献带你了解AI热点技](https://mp.weixin.qq.com/s/EMWpBP5iB1Qrleo3XNjbuQ)
@@ -4967,6 +4976,27 @@ DALL-E3：
 [何恺明新作再战AI生成：入职MIT后首次带队，奥赛双料金牌得主邓明扬参与](https://mp.weixin.qq.com/s/JxdYrYOzkM5DBMR0D49WUQ)
 
 [Autoregressive Image Generation without Vector Quantization](https://arxiv.org/pdf/2406.11838v1)
+
+## Cambrian-1
+
+[寒武纪1号诞生：谢赛宁Yann LeCun团队发布最强开源多模态LLM](https://mp.weixin.qq.com/s/NFiorsNZLzVT1YXeLgNZPw)
+
+[Cambrian-1: A Fully Open, Vision-Centric Exploration of Multimodal LLMs](https://arxiv.org/pdf/2406.16860)
+
+[https://github.com/cambrian-mllm/cambrian](https://github.com/cambrian-mllm/cambrian)
+
+[https://huggingface.co/nyu-visionx/](https://huggingface.co/nyu-visionx/)
+
+[https://huggingface.co/datasets/nyu-visionx/CV-Bench](https://huggingface.co/datasets/nyu-visionx/CV-Bench)
+
+[https://github.com/cambrian-mllm/cambrian](https://github.com/cambrian-mllm/cambrian)
+
+当前多模态学习研究的两个潜在问题：
+
++ 过度且过早地依赖语言，这是一个捷径，能弥补学习有效视觉表征的不足之处
++ 现有基准可能无法为真实世界场景提供足够的指导 —— 视觉定基对于稳健的多模态理解至关重要
+
+
 
 
 # 多模态（视频）
