--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2287,6 +2287,21 @@ aaren：
 
 基于：[Neural Algorithmic Reasoning](https://arxiv.org/pdf/2105.02761)
 
+## 
+
+[通向概率分布之路：盘点Softmax及其替代品](https://mp.weixin.qq.com/s/tA9kJqD279dHnivzPkvbjg)
+
+把softmax的分母记为$$Z(x)$$，其对数是max的一个光滑近似：
+
+$$
+\begin{array}{r}
+\log Z(\boldsymbol{x})=\log \sum_{j=1}^n e^{x_j}=\operatorname{logsumexp}(\boldsymbol{x}) \\
+\lim _{\tau \rightarrow 0^{+}} \tau \operatorname{logsumexp}(\boldsymbol{x} / \tau)=\max (\boldsymbol{x})
+\end{array}
+$$
+
+当$$\tau$$取1时，可以得到$$\operatorname{logsumexp}(\boldsymbol{x}) \approx \max (\boldsymbol{x})$$
+
 # 训练与预测方法
 
 ## 一些框架简介
@@ -3561,6 +3576,25 @@ def forward(self, ...):
 
 [https://github.com/google/gemma.cpp](https://github.com/google/gemma.cpp)
 
+### gemma-2
+
+[单张A100全精度推理！谷歌明星开源模型Gemma 2上新9B/27B，挑战3140亿Grok-1](https://mp.weixin.qq.com/s/z3h1eExDgItDf38Xar6yPg)
+
+[https://huggingface.co/collections/google/gemma-2-release-667d6600fd5220e7b967f315](https://huggingface.co/collections/google/gemma-2-release-667d6600fd5220e7b967f315)
+
+[https://blog.google/technology/developers/google-gemma-2/](https://blog.google/technology/developers/google-gemma-2/)
+
+[Gemma 2: Improving Open Language Models at a Practical Size](https://storage.googleapis.com/deepmind-media/gemma/gemma-2-report.pdf)
+
++ **局部滑动窗口**和**全局注意力**：在每隔一层中交替使用局部滑动窗口注意力和全局注意力，局部注意力层的滑动窗口大小设置为4096个token，而全局注意力层的跨度设置为8192个token。
++ **Logit软封顶**：根据**Gemini 1.5的方法**，研究团队在每个注意力层和最终层限制logit，使得logit的值保持在$$−soft\_cap,+soft\_cap$$之间。对于9B和27B模型，注意力对数封顶设置为50.0，最终对数封顶设置为30.0。截至本文发表时，注意力logit软封顶与常见的FlashAttention实现不兼容，因此他们已从使用FlashAttention的库中移除了此功能。对模型生成进行了有无注意力logit软封顶的消融实验，发现大多数预训练和后期评估中，生成质量几乎不受影响。本文中的所有评估均使用包含注意力logit软封顶的完整模型架构。然而，某些下游性能可能仍会受到此移除的轻微影响。
+
+$$
+\text { logits } \leftarrow \text { soft_cap } * \text { tanh(logits } / \text { soft_cap) }
+$$
+
++ **RMSNorm**进行post-norm和pre-norm。为了稳定训练，用RMSNorm对每个变换子层、注意力层和前馈层的输入和输出进行归一化。 
++ **gqa**：27B和9B模型均使用GQA，num_groups = 2，基于消融实验表明在保持下游性能的同时提高了推理速度。
 
 ### Claude
 
@@ -6181,6 +6215,11 @@ $$
 [从Claude 3中提取数百万特征，首次详细理解大模型的「思维」](https://mp.weixin.qq.com/s/cZhmvAva6NDLG84kD819Ww)
 
 [Scaling Dictionary Learning to Claude 3 Sonnet](https://transformer-circuits.pub/2024/scaling-monosemanticity/index.html)
+
+[LLM惊现篡改代码获得奖励，欺骗人类无法根除逆转！Anthropic新作揭露惊人真相](https://mp.weixin.qq.com/s/Fgkkc3p7zIW8OrCvSU-2lA)
+
+
+[SYCOPHANCY TO SUBTERFUGE: INVESTIGATING REWARD TAMPERING IN LANGUAGE MODELS](https://arxiv.org/pdf/2406.10162)
 
 
 ## ChatGLM
