--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -1511,6 +1511,10 @@ LN(layer norm)能缓解LLM训练不稳定的问题，其位置很重要。
 
 此外，**在emb后直接加额外的LN**能提升训练稳定性，但会导致**显著的性能下降**([What language model to train if you have one million GPU hours?](https://arxiv.org/pdf/2210.15424.pdf))，在后来的LLM中**被移除**（[BLOOM: A 176b-parameter open-access multilingual language model](https://arxiv.org/pdf/2211.05100.pdf)）。
 
+[神经网络可能不再需要激活函数？Layer Normalization也具有非线性表达！](https://mp.weixin.qq.com/s/YRAcAKouScQGt3lOxe8fBQ)
+
+[On the Nonlinearity of Layer Normalization](https://arxiv.org/pdf/2406.01255)
+
 ### 激活函数
 
 &nbsp;
@@ -3774,6 +3778,8 @@ Grok-1.5V: [https://x.ai/blog/grok-1.5v](https://x.ai/blog/grok-1.5v)
 + 使用这些示例进行**有监督微调**
 
 详见综述[Is prompt all you need? no. A comprehensive and broader view of instruction learning](https://arxiv.org/pdf/2303.10475.pdf)
+
+数据集：[https://huggingface.co/collections/davanstrien/top-10-instruction-tuning-datasets-650d91e11427d12e8542a21a](https://huggingface.co/collections/davanstrien/top-10-instruction-tuning-datasets-650d91e11427d12e8542a21a)
 
 ### 构建格式化实例
 
