--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2317,6 +2317,10 @@ $$
 + trtllm-build时，加上```--streamingllm enable```
 + infer时，加上```--sink_token_length```设置sink的token数，加上```--max_attention_window_size```设置sliding_window
 
+## 是否还要RAG?
+
+[谷歌重磅：告别RAG，长上下文的大语言模型无需检索增强](https://mp.weixin.qq.com/s/lOORnoyrA8lqOEXWKxhAQg)
+
 # 训练与预测方法
 
 ## 一些框架简介
