--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2842,9 +2842,29 @@ LLM的训练语料大都是相同长度的sequence，一般是多篇文档concat
 
 [RHO-1: Not All Tokens Are What You Need](https://arxiv.org/pdf/2404.07965)
 
+[https://github.com/microsoft/rho](https://github.com/microsoft/rho)
+
+![rho-1](../assets/rho-1.png)
+
+把语料中的无用token从loss里删了
+
+![slm](../assets/slm.png)
+
++ 训练ref_model，挑选少量高质量语料，建模语料的整体loss分布情况
++ 拿ref_model在整个预训练语料上计算每个token的ppl
++ 训练LLM，只关注得分比较高的tokens
+
 ### infinit lr
 
 [Simple and Scalable Strategies to Continually Pre-train Large Language Models](https://arxiv.org/pdf/2403.08763)
+
+linear warmup and cosine decay schedule：
+
++ 前$$T_{warmup}$$步线性增加学习率，即直到时间步$$t_{\text {ann }}=T_{\text {warmup }}$$，学习率设置为$$\eta_t=\eta_{\max } \cdot \frac{t}{T_{\text {warmup }}}$$
++ 对于接下来的$$T_{ann}$$个时间步，改为cosine annealing方式，即对于时间步$$t_{e n d}=T_{a n n}+t_{a n n}$$：
+$$
+\eta_t=\eta_{\min }+\frac{\left(\eta_{\max }-\eta_{\min }\right)}{2} \cdot\left(\cos \left(\pi \cdot \frac{t-t_{a n n}}{t_{\text {end }}-t_{\text {ann }}}\right)+1\right)
+$$
 
 # 预测框架
 
