--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -6305,13 +6305,7 @@ $$
 
 [Meta Large Language Model Compiler: Foundation Models of Compiler Optimization](https://ai.meta.com/research/publications/meta-large-language-model-compiler-foundation-models-of-compiler-optimization/)
 
-## 可解释AI
 
-[XAI有什么用？探索LLM时代利用可解释性的10种策略](https://mp.weixin.qq.com/s/V35k4UJZPtJkAHqYlZiO1A)
-
-[Usable XAI: 10 Strategies Towards Exploiting Explainability in the LLM Era](https://arxiv.org/pdf/2403.08946.pdf)
-
-[https://github.com/JacksonWuxs/UsableXAI_LLM](https://github.com/JacksonWuxs/UsableXAI_LLM)
 
 ## ProLong
 
@@ -6407,9 +6401,7 @@ iclr23 [GLM-130B: An Open Bilingual Pre-trained Model](https://arxiv.org/abs/221
 
 [Revisiting Knowledge Distillation for Autoregressive Language Models](https://arxiv.org/pdf/2402.11890)
 
-### transformer-debugger
 
-[https://github.com/openai/transformer-debugger/tree/main](https://github.com/openai/transformer-debugger/tree/main)
 
 ### 自动搜参
 
@@ -6560,6 +6552,48 @@ $$
     + 循环5次：
         shuffle测试question的答案选项，让LLM回答
     + 对生成的答案投票，选票数最多的
+
+# 可解释AI
+
+[XAI有什么用？探索LLM时代利用可解释性的10种策略](https://mp.weixin.qq.com/s/V35k4UJZPtJkAHqYlZiO1A)
+
+[Usable XAI: 10 Strategies Towards Exploiting Explainability in the LLM Era](https://arxiv.org/pdf/2403.08946.pdf)
+
+[https://github.com/JacksonWuxs/UsableXAI_LLM](https://github.com/JacksonWuxs/UsableXAI_LLM)
+
+## TransformerLens
+
+Neel Nanda（deepmind）的项目
+
+[https://transformerlensorg.github.io/TransformerLens/](https://transformerlensorg.github.io/TransformerLens/)
+
+## ecco
+
+[https://www.eccox.io/](https://www.eccox.io/)
+
+[https://jalammar.github.io/explaining-transformers/](https://jalammar.github.io/explaining-transformers/)
+
+[https://jalammar.github.io/hidden-states/](https://jalammar.github.io/hidden-states/)
+
+## interpretability in the wild
+
+[Interpretability in the Wild: a Circuit for Indirect Object Identification in GPT-2 small](https://arxiv.org/pdf/2211.00593)
+
+[https://github.com/redwoodresearch/Easy-Transformer](https://github.com/redwoodresearch/Easy-Transformer)
+
+## activation engineering
+
+[Activation Addition: Steering Language Models Without Optimization](https://arxiv.org/pdf/2308.10248)
+
+## representation engineering
+
+[Representation Engineering: A Top-Down Approach to AI Transparency](https://arxiv.org/pdf/2310.01405)
+
+
+## transformer-debugger
+
+[https://github.com/openai/transformer-debugger/tree/main](https://github.com/openai/transformer-debugger/tree/main)
+
 
 
 # 其他
