--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -6267,6 +6267,21 @@ $$
 + 定位了一个特别参与段落记忆的**低层注意力头**，它**主要关注**在语料库级单词频率分布中**最不频繁出现的独特、罕见的token**。
 + 总的来说，相较非记忆的续写，记忆续写不仅**更难以遗忘**，也**更难以损坏**。
 
+### reasoning
+
+[Reasoning or Reciting? Exploring the Capabilities and Limitations of Language Models Through Counterfactual Tasks](https://arxiv.org/pdf/2307.02477) MIT的
+
+[Do Large Language Models Latently Perform Multi-Hop Reasoning?](https://arxiv.org/pdf/2402.16837) deepmind的
+
+[How do Language Models Bind Entities in Context?](https://arxiv.org/pdf/2310.17191) UC berkeley的，ICLR2024
+
+### memorizing
+
+[Knowledge Neurons in Pretrained Transformers](https://arxiv.org/pdf/2104.08696) ACL 2022
+ 
+[Language Modeling Is Compression](https://arxiv.org/pdf/2309.10668) ICLR 2024 deepmind
+
+[Memorization Without Overfitting: Analyzing the Training Dynamics of Large Language Models](https://arxiv.org/pdf/2205.10770) meta NeurIPS 2022
 
 ## 越狱
 
