--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2373,6 +2373,16 @@ $$
 
 [谷歌重磅：告别RAG，长上下文的大语言模型无需检索增强](https://mp.weixin.qq.com/s/lOORnoyrA8lqOEXWKxhAQg)
 
+## TTT
+
+[彻底改变语言模型：全新架构TTT超越Transformer，ML模型代替RNN隐藏状态](https://mp.weixin.qq.com/s/QSw9PKB_HhSxeO7agnzBgQ)
+
+[Learning to (Learn at Test Time): RNNs with Expressive Hidden States](https://arxiv.org/pdf/2407.04620)
+
+
+![ttt](../assets/ttt.png)
+
+
 # 训练框架
 
 mfu(Model Flops Utilization)模型算力利用率是分布式训练效率的优化目标。
