--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2379,6 +2379,7 @@ $$
 
 [Learning to (Learn at Test Time): RNNs with Expressive Hidden States](https://arxiv.org/pdf/2407.04620)
 
+[https://github.com/test-time-training/ttt-lm-pytorch](https://github.com/test-time-training/ttt-lm-pytorch)
 
 ![ttt](../assets/ttt.png)
 
@@ -6103,6 +6104,16 @@ word版的笔记：[https://github.com/daiwk/collections/blob/master/assets/mult
 
 ![learn-ceg-pch](../assets/learn-ceg-pch.png)
 
+
+## ACL2024的recgpt
+
+[RecGPT: Generative Pre-training for Text-based Recommendation](https://arxiv.org/pdf/2405.12715)
+
+## 快手的recgpt
+
+[RecGPT: Generative Personalized Prompts for Sequential Recommendation via ChatGPT Training Paradigm](https://arxiv.org/pdf/2404.08675)
+
+[https://zhuanlan.zhihu.com/p/699985083](https://zhuanlan.zhihu.com/p/699985083)
 
 ## 推荐生态系统
 
