--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -6125,6 +6125,12 @@ word版的笔记：[https://github.com/daiwk/collections/blob/master/assets/mult
 
 [https://zhuanlan.zhihu.com/p/699985083](https://zhuanlan.zhihu.com/p/699985083)
 
+## 蚂蚁的SLIM
+
+[Can Small Language Models be Good Reasoners for Sequential Recommendation?](https://arxiv.org/pdf/2403.04260)
+
+![slim](../assets/slim.png)
+
 ## 推荐生态系统
 
 [Modeling Recommender Ecosystems: Research Challenges at the Intersection of Mechanism Design, Reinforcement Learning and Generative Models](https://storage.googleapis.com/gweb-research2023-media/pubtools/pdf/e00cc0ce4480c15339b7798943560ad1a0d593ce.pdf)
