--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -6160,7 +6160,23 @@ word版的笔记：[https://github.com/daiwk/collections/blob/master/assets/mult
 + 考虑LLM生成的描述与目标物品（Target Item）的接近程度，增加其排名；
 + 若教师模型（Teacher Model）认为某物品是优质且排名靠前的，学生模型（Student Model）也会给予其更高排名。
 
-通过这些策略，设计了排名损失（Ranking Loss）函数，用于蒸馏小型序列模型：
+通过这些策略，设计了Ranking Loss，用于蒸馏小型序列模型
+
+$$
+\mathcal{L}_d=-\sum_{s \in \Gamma} \sum_{i \in O^T} w_{s i} \log \sigma\left(\hat{y}_{s i}\right)
+$$
+
+其中，$$O^T$$是teacher返回的topk结果，$$\Gamma$$是训练集的序列数，$$$$包括如下3部分：
+
++ position-aware weight：$$w_{\mathrm{s} i}^p \propto \exp \left(-r_i / \beta\right)$$，$$r_i$$是item $$i$$在teacher返回结果里的排名，$$\beta$$是一个超参
++ confidence-aware weight：$$w_{\mathrm{s} i}^c \propto \exp \left(-d_{\mathrm{s} i^*} / \beta\right)$$，且$$d_{\mathbf{s} i^*}=\left\|\mathbf{z}_{d_{\mathrm{s}}}-\mathrm{z}_{i^*}\right\|^2$$，$$\mathbf{z}_{d_{\mathrm{s}}}$$是生成的item描述，$$\mathrm{z}_{i^*}$$是ground truth的item描述，分别通过一个llm encoder得到向量
++ consistency-aware weight：同时被teacher和student推荐的item更有可能是一个强正例
+$$
+w_{\mathrm{s} i}^o= \begin{cases}1, & i \in O^T \cap O^S \\ 0, & i \notin O^T \cap O^S\end{cases}
+$$
+
+
+
 
 ## 推荐生态系统
 
